--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 MagneticDiffusion1D-Polar/distributed/results.txt
 MagneticDiffusion1D-Polar/distributed/rundist.exp
+MagneticDiffusion1D-Polar/mag.exe
+MagneticDiffusion1D-Polar/distributed/rundist.lib
