--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ MagneticDiffusion1D-Polar/distributed/results.txt
 MagneticDiffusion1D-Polar/distributed/rundist.exp
 MagneticDiffusion1D-Polar/mag.exe
 MagneticDiffusion1D-Polar/distributed/rundist.lib
+*.exe
+*.lib
+MagneticDiffusion2D-Polar/serial/res.txt
+MagneticDiffusion2D-Polar/serial/init.txt
+*.exp
+*.html
+*.pdb
+*.html
+*.html
+*.txt
+MagneticDiffusion1D-Polar/distributedLocal/book.h
+*.html
+*.html
+*.html
+*.html
