Added bias frequency

--- a/Engine/config
+++ b/Engine/config
@@ -7,5 +7,6 @@ Rpoints = 50
 Zpoints = 50
 StartTime (s) = 0
 EndTime (s) = 1
-Vmax (V) = 110
-Vmin (V) = -110
+Vmax (V) = 100
+Vmin (V) = -100
+Freq (Hz) = 5.0e3
