Commited in broken condition for retrieval on another machine

--- a/Engine/config
+++ b/Engine/config
@@ -6,7 +6,7 @@ Ztot (m) = 1
 Rpoints = 50
 Zpoints = 50
 StartTime (s) = 0
-EndTime (s) = 1
+EndTime (s) = 1e-2
 Vmax (V) = 100
 Vmin (V) = -100
-Freq (Hz) = 5.0e3
+Freq (Hz) = 5.0e6
